--- a/src/LandingPage/Landingpage.css
+++ b/src/LandingPage/Landingpage.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 100px;
+    gap: 60px;
 }
 
 .hero-content {
